Fix overflow issue

--- a/styles/compile/hero.sass
+++ b/styles/compile/hero.sass
@@ -27,7 +27,7 @@ section[is="hero"]
     @extend %main-content
     position: relative
     margin: 0 0 units(4) 0
-    //overflow: hidden
+    overflow: hidden
     border-radius: $border-m
     transition: scale 0.4s
 
